--- a/contact.html
+++ b/contact.html
@@ -159,7 +159,7 @@
                                 </div>
                             </div>
                             <div class="col-12">
-                                <button class="btn btn-primary py-3 px-5" type="submit">Send Message</button>
+                                <button class="btn btn-primary py-3 px-5" type="submit">Send To Us</button>
                             </div>
                         </div>
                     </form>
