--- a/contact.html
+++ b/contact.html
@@ -129,9 +129,8 @@
                     </div>
                 </div>
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.5s">
-                    <h6 class="text-primary text-uppercase mb-2">Contact Us</h6>
+                    <h6 class="text-primary text-uppercase mb-2" style="color:rgb(122, 127, 148)">Contact</h6>
                     <h1 class="display-6 mb-4">If You Have Any Query, Please Contact Us</h1>
-                    <p class="mb-4">The contact form is currently inactive. Get a functional and working contact form with Ajax & PHP in a few minutes. Just copy and paste the files, add a little code and you're done. <a href="https://htmlcodex.com/contact-form">Download Now</a>.</p>
                     <form>
                         <div class="row g-3">
                             <div class="col-md-6">
@@ -144,12 +143,6 @@
                                 <div class="form-floating">
                                     <input type="email" class="form-control border-0 bg-light" id="email" placeholder="Your Email">
                                     <label for="email">Your Email</label>
-                                </div>
-                            </div>
-                            <div class="col-12">
-                                <div class="form-floating">
-                                    <input type="text" class="form-control border-0 bg-light" id="subject" placeholder="Subject">
-                                    <label for="subject">Subject</label>
                                 </div>
                             </div>
                             <div class="col-12">
