--- a/contact.html
+++ b/contact.html
@@ -117,20 +117,25 @@
 
 
     <!-- Contact Start -->
-    <div class="container-xxl py-6">
+    <div class="container-xxl py-6" style="background-image: url('C:/Users/HP EliteBook 1040 G3/Downloads/02.png'); background-size: cover; background-position: center;" >
         <div class="container">
             <div class="row g-5">
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s" style="min-height: 450px;">
-                    <div class="position-relative h-100">
-                        <iframe class="position-relative w-100 h-100"
-                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3001156.4288297426!2d-78.01371936852176!3d42.72876761954724!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4ccc4bf0f123a5a9%3A0xddcfc6c1de189567!2sNew%20York%2C%20USA!5e0!3m2!1sen!2sbd!4v1603794290143!5m2!1sen!2sbd"
-                        frameborder="0" style="min-height: 450px; border:0;" allowfullscreen="" aria-hidden="false"
-                        tabindex="0"></iframe>
-                    </div>
+                     <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
+                    <aside  style="border: 2px solid black; padding: 20px; background-color: rgba(255, 255, 255, 0.8); border-radius: 5px; margin-left: auto; margin-right: auto;">
+                        <h2 class="text-primary" style="color: black">Our Office</h2>
+                        <p>1234 Street Name,<br>City, State, Zip Code</p>
+                        <p><strong>Phone:</strong> (123) 456-7890</p>
+                        <p><strong>Email:</strong> info@example.com</p>
+                        <h3 class="text-primary" style="color: black">Office Hours</h3>
+                        <p>Monday - Friday: 9:00 AM - 5:00 PM</p>
+                        <p>Saturday - Sunday: Closed</p>
+                    </aside>
                 </div>
-                <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.5s">
-                    <h6 class="text-primary text-uppercase mb-2" style="color:rgb(122, 127, 148)">Contact</h6>
-                    <h1 class="display-6 mb-4">If You Have Any Query, Please Contact Us</h1>
+                </div>
+                <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.5s"  >
+                    <h6 class="text-primary text-uppercase mb-2" style="color: black; font-size: 20px;" class="text-uppercase mb-2" >Contact</h6>
+                    <h1 class="display-6 mb-4" style="color: black; font-size: 20px;" >If You Have Any Query, Please Contact Us</h1>
                     <form>
                         <div class="row g-3">
                             <div class="col-md-6">
@@ -152,7 +157,7 @@
                                 </div>
                             </div>
                             <div class="col-12">
-                                <button class="btn btn-primary py-3 px-5" type="submit">Send To Us</button>
+                                <button class="btn btn-primary py-3 px-5" type="submit" style="background-color: black">Submit</button>
                             </div>
                         </div>
                     </form>
