--- a/contact.html
+++ b/contact.html
@@ -121,20 +121,23 @@
         <div class="container">
             <div class="row g-5">
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s" style="min-height: 450px;">
+                    <h6 class="text-primary text-uppercase mb-2" style="color: black; font-size: 50px; font-family: 'Bernadette', script;"class="text-uppercase mb-2" >Contact</h6>
                      <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
                     <aside  style="border: 2px solid black; padding: 20px; background-color: rgba(255, 255, 255, 0.8); border-radius: 5px; margin-left: auto; margin-right: auto;">
-                        <h2 class="text-primary" style="color: black">Our Office</h2>
+                        <h2 class="text-primary" style="color: black;">Our Office<hr></h2>
                         <p>1234 Street Name,<br>City, State, Zip Code</p>
                         <p><strong>Phone:</strong> (123) 456-7890</p>
                         <p><strong>Email:</strong> info@example.com</p>
-                        <h3 class="text-primary" style="color: black">Office Hours</h3>
+                        <h3 class="text-primary" style="color: black;">Office Hours</h3>
                         <p>Monday - Friday: 9:00 AM - 5:00 PM</p>
                         <p>Saturday - Sunday: Closed</p>
                     </aside>
                 </div>
                 </div>
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.5s"  >
-                    <h6 class="text-primary text-uppercase mb-2" style="color: black; font-size: 20px;" class="text-uppercase mb-2" >Contact</h6>
+                    <br>
+                    <br>
+                    <br>
                     <h1 class="display-6 mb-4" style="color: black; font-size: 20px;" >If You Have Any Query, Please Contact Us</h1>
                     <form>
                         <div class="row g-3">
