--- a/about.html
+++ b/about.html
@@ -128,7 +128,7 @@
                 </div>
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.5s">
                     <div class="h-100">
-                        <h6 class="text-primary text-uppercase mb-2">About Us</h6>
+                        <h6 class="text-primary text-uppercase mb-2">About</h6>
                         <!---<h1 class="display-6 mb-4">We Help Students To Pass Test & Get A License On The First Try</h1>--->
                         <p>Felicia Day has appeared in numerous television shows and films such as “Supernatural”, “Eureka” and “The Magicians”. Her IMDB, with over 100 credits, can be found here.
 
