--- a/index.html
+++ b/index.html
@@ -247,42 +247,42 @@ Felicia has over 6 million followers across social platforms.</p>
                     </div>
                 </div>
                 <div class="col-lg-8 my-6 mb-0 wow fadeInUp" data-wow-delay="0.1s">
-                    <div class="bg-primary text-center p-5">
-                        <h1 class="mb-4">Make Appointment</h1>
+                    <div class="bg-primary-color:#757575 text-center p-5">
+                        <h1 class="mb-4"  style="text-align: left, font-family: 'Pacifico', cursive; font-size: 40px; color: rgb(122, 127, 148);">Appearances</h1>
                         <form>
                             <div class="row g-3">
                                 <div class="col-sm-6">
                                     <div class="form-floating">
                                         <input type="text" class="form-control border-0" id="gname" placeholder="Gurdian Name">
-                                        <label for="gname">Your Name</label>
+                                        <label for="gname">Motor City Comicon</label>
                                     </div>
                                 </div>
                                 <div class="col-sm-6">
                                     <div class="form-floating">
                                         <input type="email" class="form-control border-0" id="gmail" placeholder="Gurdian Email">
-                                        <label for="gmail">Your Email</label>
+                                        <label for="gmail">Detroit, MI</label>
                                     </div>
                                 </div>
                                 <div class="col-sm-6">
                                     <div class="form-floating">
                                         <input type="text" class="form-control border-0" id="cname" placeholder="Child Name">
-                                        <label for="cname">Courses Type</label>
+                                        <label for="cname">Creation SPN Seattle</label>
                                     </div>
                                 </div>
                                 <div class="col-sm-6">
                                     <div class="form-floating">
                                         <input type="text" class="form-control border-0" id="cage" placeholder="Child Age">
-                                        <label for="cage">Car Type</label>
+                                        <label for="cage">Seattle, WA</label>
                                     </div>
                                 </div>
                                 <div class="col-12">
                                     <div class="form-floating">
                                         <textarea class="form-control border-0" placeholder="Leave a message here" id="message" style="height: 100px"></textarea>
-                                        <label for="message">Message</label>
+                                        <label for="message">Creation SPN Austin</label>
                                     </div>
                                 </div>
                                 <div class="col-12">
-                                    <button class="btn btn-dark w-100 py-3" type="submit">Submit</button>
+                                    <button class="btn btn-dark w-100 py-3" type="submit">Comicon The Cruise!</button>
                                 </div>
                             </div>
                         </form>
