--- a/contact.html
+++ b/contact.html
@@ -117,7 +117,7 @@
 
 
     <!-- Contact Start -->
-    <div class="container-xxl py-6" style="background-image: url('C:/Users/HP EliteBook 1040 G3/Downloads/02.png'); background-size: cover; background-position: center;" >
+    <div class="container-xxl py-6" style="background-image: url('D:/FinalProject/img/02.png'); background-size: cover; background-position: center;" >
         <div class="container">
             <div class="row g-5">
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s" style="min-height: 450px;">
