--- a/reel.html
+++ b/reel.html
@@ -81,15 +81,15 @@
             <div class="navbar-nav ms-auto p-4 p-lg-0">
                 <a href="index.html" class="nav-item nav-link">Home</a>
                 <a href="about.html" class="nav-item nav-link">About</a>
-                <a href="reels.html" class="nav-item nav-link">Courses</a>
+                <a href="reels.html" class="nav-item nav-link active">Reels</a>
                 <div class="nav-item dropdown">
-                    <a href="#" class="nav-link dropdown-toggle active" data-bs-toggle="dropdown">Pages</a>
+                    <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
                     <div class="dropdown-menu bg-light m-0">
                         <a href="feature.html" class="dropdown-item">Features</a>
                         <a href="appointment.html" class="dropdown-item">Appointment</a>
                         <a href="team.html" class="dropdown-item">Our Team</a>
                         <a href="testimonial.html" class="dropdown-item">Testimonial</a>
-                        <a href="404.html" class="dropdown-item active">404 Page</a>
+                        <a href="404.html" class="dropdown-item">404 Page</a>
                     </div>
                 </div>
                 <a href="contact.html" class="nav-item nav-link">Contact</a>
@@ -103,12 +103,12 @@
     <!-- Page Header Start -->
     <div class="container-fluid page-header py-6 my-6 mt-0 wow fadeIn" data-wow-delay="0.1s">
         <div class="container text-center">
-            <h1 class="display-4 text-white animated slideInDown mb-4">404 Error</h1>
+            <h1 class="display-4 text-white animated slideInDown mb-4">Reels</h1>
             <nav aria-label="breadcrumb animated slideInDown">
                 <ol class="breadcrumb justify-content-center mb-0">
                     <li class="breadcrumb-item"><a class="text-white" href="#">Home</a></li>
                     <li class="breadcrumb-item"><a class="text-white" href="#">Pages</a></li>
-                    <li class="breadcrumb-item text-primary active" aria-current="page">404 Error</li>
+                    <li class="breadcrumb-item text-primary active" aria-current="page">Reels</li>
                 </ol>
             </nav>
         </div>
@@ -116,22 +116,51 @@
     <!-- Page Header End -->
 
 
-    <!-- 404 Start -->
-    <div class="container-xxl py-6 wow fadeInUp" data-wow-delay="0.1s">
-        <div class="container text-center">
-            <div class="row justify-content-center">
-                <div class="col-lg-6">
-                    <i class="bi bi-exclamation-triangle display-1 text-primary"></i>
-                    <h1 class="display-1">404</h1>
-                    <h1 class="mb-4">Page Not Found</h1>
-                    <p class="mb-4">We’re sorry, the page you have looked for does not exist in our website! Maybe go to our home page or try to use a search?</p>
-                    <a class="btn btn-primary py-3 px-5" href="">Go Back To Home</a>
+    <!-- Reels Start -->
+    <div class="container-xxl py-6">
+        <div class="container">
+            <div class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 500px;">
+                <h6 class="text-primary text-uppercase mb-2">REELS</h6>
+                <h1 class="display-6 mb-4">HERE ARE THE VIDEOS OF FELICIA'S WORK</h1>
+            </div>
+            <div class="row g-4 justify-content-center">
+                <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
+                    <div class="courses-item d-flex flex-column bg-light overflow-hidden h-70">                        
+                        <h5 class="text-center pt-2" >Acting reel</h5>
+                        <div class="position-relative mt-auto">
+                            <iframe title="Acting Reel" src="https://player.vimeo.com/video/891556209?dnt=1&amp;app_id=122963" width="360" height="281" frameborder="0" allow="autoplay; fullscreen; picture-in-picture; clipboard-write"></iframe>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
+                    <div class="courses-item d-flex flex-column bg-light overflow-hidden h-70">                         
+						<h5 class="text-center pt-2" >Hosting Reel</h5>
+                        <div class="position-relative mt-auto">
+                            <iframe title="Hosting Reel" src="https://player.vimeo.com/video/891551296?dnt=1&amp;app_id=122963" width="360" height="281" frameborder="0" allow="autoplay; fullscreen; picture-in-picture; clipboard-write"></iframe>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
+                    <div class="courses-item d-flex flex-column bg-light overflow-hidden h-70">                         
+						<h5 class="text-center pt-2" >Voiceover Reel</h5>
+                        <div class="position-relative mt-auto">
+                            <iframe loading="lazy" title="VO Reel" src="https://player.vimeo.com/video/891554371?dnt=1&amp;app_id=122963" width="360" height="281" frameborder="0" allow="autoplay; fullscreen; picture-in-picture; clipboard-write"></iframe>
+                        </div>
+                    </div>
+                </div>
+				<div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
+                    <div class="courses-item d-flex flex-column bg-light overflow-hidden h-70">                         
+						<h5 class="text-center pt-2" >Video Game VO Reel</h5>
+                        <div class="position-relative mt-auto">
+                            <iframe loading="lazy" title="Video Game VO Reel" src="https://player.vimeo.com/video/891557253?dnt=1&amp;app_id=122963" width="360" height="281" frameborder="0" allow="autoplay; fullscreen; picture-in-picture; clipboard-write"></iframe>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
-    <!-- 404 End -->
-        
+    <!-- Reels End -->
+
 
     <!-- Footer Start -->
     <div class="container-fluid bg-dark text-light footer my-6 mb-0 py-6 wow fadeIn" data-wow-delay="0.1s">
