--- a/index.html
+++ b/index.html
@@ -142,25 +142,26 @@
     </nav>
     <!-- Navbar End -->
 
-<!-- Background Image Start -->
-<div>
-    <div class="header-background d-flex align-items-center">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-7">
-                	<br><br>
-                	<br>
-                	<br>
-                    <p style="text-color: black">Falicia Day is an..</p>
-                    <a href="" class="btn btn-dark btn-sm py-2 px-4" style="background-color: black" >Actor</a>
-                    <a href="" class="btn btn-dark btn-sm py-2 px-4" style="background-color: black">Writer</a>
-                    <a href="" class="btn btn-dark btn-sm py-2 px-4" style="background-color: black">Producer</a>
-                    <a href="" class="btn btn-dark btn-sm py-2 px-4" style="background-color: black">Author</a>
+ <!-- Background Image Start -->
+    <div>
+        <div class="header-background d-flex align-items-center">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-7">
+                        <br><br>
+                        <br>
+                        <br>
+                        <p style="color: black;">Falicia Day is an..</p>
+                        <a href="" class="btn btn-dark btn-sm py-2 px-4" style="background-color: black;">Actor</a>
+                        <a href="" class="btn btn-dark btn-sm py-2 px-4" style="background-color: black;">Writer</a>
+                        <a href="" class="btn btn-dark btn-sm py-2 px-4" style="background-color: black;">Producer</a>
+                        <a href="" class="btn btn-dark btn-sm py-2 px-4" style="background-color: black;">Author</a>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
-</div>
+    <!-- Background Image End -->
 <!-- Background Image End -->
 
 
