--- a/contact.html
+++ b/contact.html
@@ -117,7 +117,7 @@
 
 
     <!-- Contact Start -->
-    <div class="container-xxl py-6" style="background-image: url('D:/FinalProject/img/02.png'); background-size: cover; background-position: center;" >
+    <div class="container-xxl py-6" style="background-image: url('https://raw.githubusercontent.com/Shanila-Khan/FinalProject/master/img/02.png'); background-size: cover; background-position: center;" >
         
         <div class="container">
             <div class="row g-5">
