--- a/about.html
+++ b/about.html
@@ -122,7 +122,7 @@
             <div class="row g-5">
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
                     <div class="position-relative overflow-hidden ps-5 pt-5 h-100" style="min-height: 400px;">
-                        <img class="position-absolute w-100 h-100" style="height: 35px;" src="C:/Users/HP EliteBook 1040 G3/Downloads/bio.png" alt="" style="object-fit: cover;">
+                        <img class="position-absolute w-100 h-100" style="height: 35px;" src="https://raw.githubusercontent.com/Shanila-Khan/FinalProject/master/img/bio.png" alt="" style="object-fit: cover;">
                         
                     </div>
                 </div>
