--- a/index.html
+++ b/index.html
@@ -31,47 +31,7 @@
 
     <!-- Template Stylesheet -->
     <link href="css/style.css" rel="stylesheet">
-    <style>
-        :root {
-            --primary-gradient: linear-gradient(to right, #ffcccb, #87ceeb); /* Light pink to light blue */
-            --grey: #6c757d; /* Grey color for buttons */
-            --light-grey: #adb5bd; /* Light grey color for hover effect */
-        }
-
-        .footer,
-        .copyright {
-            background: var(--primary-gradient);
-            color: #fff; /* Ensure the text color is light for readability */
-        }
-
-        .btn-primary,
-        .btn-square.btn-outline-light {
-            background-color: var(--grey);
-            border-color: var(--grey);
-            color: #fff;
-        }
-
-        .btn-primary:hover,
-        .btn-square.btn-outline-light:hover {
-            background-color: var(--light-grey);
-            border-color: var(--light-grey);
-            color: #fff;
-        }
-
-        .btn-square {
-            background-color: transparent; /* Ensure the square buttons are initially transparent */
-        }
-
-        .btn-square.btn-outline-light {
-            border: 2px solid #fff; /* Define the border for square buttons */
-        }
-
-        .btn-square.btn-outline-light:hover {
-            background-color: var(--light-grey);
-            border-color: var(--light-grey);
-            color: #fff;
-        }
-    </style>
+    
 </head>
 
 <body>
@@ -317,7 +277,10 @@ Felicia has over 6 million followers across social platforms.</p>
             <div class="row g-5">
                 <div class="col-lg-3 col-md-6">
                     <h4 class="text-white mb-4">Get In Touch</h4>
-                    <h2 class="text-primary mb-4"><i class="fa fa-car text-white me-2"></i>Drivin</h2>
+                    <h2 class="text-primary mb-4">
+                        <span class="text-grey">Felicia</span>
+                        <span class="gradient-text">Day</span>
+                    </h2>
                     <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>123 Street, New York, USA</p>
                     <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+012 345 67890</p>
                     <p class="mb-2"><i class="fa fa-envelope me-3"></i>info@example.com</p>
@@ -364,7 +327,7 @@ Felicia has over 6 million followers across social platforms.</p>
         <div class="container">
             <div class="row">
                 <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
-                    &copy; <a href="#">Your Site Name</a>, All Right Reserved.
+                    &copy; <a href="#">Falicia Day</a>, All Right Reserved.
                 </div>
                 <div class="col-md-6 text-center text-md-end">
                     <!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
