--- a/about.html
+++ b/about.html
@@ -39,48 +39,20 @@
     <!-- Spinner End -->
 
 
-    <!-- Topbar Start -->
-    <div class="container-fluid bg-dark text-light p-0">
-        <div class="row gx-0 d-none d-lg-flex">
-            <div class="col-lg-7 px-5 text-start">
-                <div class="h-100 d-inline-flex align-items-center me-4">
-                    <small class="fa fa-map-marker-alt text-primary me-2"></small>
-                    <small>123 Street, New York, USA</small>
-                </div>
-                <div class="h-100 d-inline-flex align-items-center">
-                    <small class="far fa-clock text-primary me-2"></small>
-                    <small>Mon - Fri : 09.00 AM - 09.00 PM</small>
-                </div>
-            </div>
-            <div class="col-lg-5 px-5 text-end">
-                <div class="h-100 d-inline-flex align-items-center me-4">
-                    <small class="fa fa-phone-alt text-primary me-2"></small>
-                    <small>+012 345 6789</small>
-                </div>
-                <div class="h-100 d-inline-flex align-items-center mx-n2">
-                    <a class="btn btn-square btn-link rounded-0 border-0 border-end border-secondary" href=""><i class="fab fa-facebook-f"></i></a>
-                    <a class="btn btn-square btn-link rounded-0 border-0 border-end border-secondary" href=""><i class="fab fa-twitter"></i></a>
-                    <a class="btn btn-square btn-link rounded-0 border-0 border-end border-secondary" href=""><i class="fab fa-linkedin-in"></i></a>
-                    <a class="btn btn-square btn-link rounded-0" href=""><i class="fab fa-instagram"></i></a>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- Topbar End -->
-
-
-    <!-- Navbar Start -->
+    
+     <!-- Navbar Start -->
     <nav class="navbar navbar-expand-lg bg-white navbar-light sticky-top p-0">
         <a href="index.html" class="navbar-brand d-flex align-items-center border-end px-4 px-lg-5">
-            <h2 class="m-0"><i class="fa fa-car text-primary me-2"></i>Drivin</h2>
+             <span style="color: grey;">Felicia</span> 
+        <span class="gradient-text">Day</span>
         </a>
         <button type="button" class="navbar-toggler me-4" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarCollapse">
             <div class="navbar-nav ms-auto p-4 p-lg-0">
-                <a href="index.html" class="nav-item nav-link">Home</a>
-                <a href="about.html" class="nav-item nav-link active">About</a>
+                <a href="index.html" class="nav-item nav-link active">Home</a>
+                <a href="about.html" class="nav-item nav-link">About</a>
                 <a href="reels.html" class="nav-item nav-link">Reels</a>
                 <div class="nav-item dropdown">
                     <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
@@ -116,23 +88,20 @@
     <!-- Page Header End -->
 
 
-    <!-- About Start -->
+     <!-- About Start -->
     <div class="container-xxl py-6">
         <div class="container">
             <div class="row g-5">
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
-                    <div class="position-relative overflow-hidden ps-5 pt-5 h-100" style="min-height: 400px;">
-                        <img class="position-absolute w-100 h-100" style="height: 35px;" src="C:/Users/HP EliteBook 1040 G3/Downloads/bio.png" alt="" style="object-fit: cover;">
-                        
+                    <div class="image-container">
+                        <img src="https://raw.githubusercontent.com/Shanila-Khan/FinalProject/master/img/felicia-headshot-1024x1024.png" alt="Felicia Day">
                     </div>
                 </div>
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.5s">
                     <div class="h-100">
                         <h6 class="text-primary text-uppercase mb-2">About</h6>
-                        <!---<h1 class="display-6 mb-4">We Help Students To Pass Test & Get A License On The First Try</h1>--->
-                        <p>Felicia Day has appeared in numerous television shows and films such as “Supernatural”, “Eureka” and “The Magicians”. Her IMDB, with over 100 credits, can be found here.
-
-However, Felicia is best known for her work in the web video world. She co-starred in Joss Whedon’s Internet musical “Dr. Horrible’s Sing-Along Blog,” which won an Emmy in 2009. She also created and starred in the seminal web series “The Guild” which ran for six seasons and won numerous awards for web video excellence. Felicia expanded the brand into numerous directions, including a hit comic book series with Dark Horse Comics. Recently, her outfit from the show was added to the Smithsonian American History collection as an example of early web media pioneering.</p>
+                        <p>Felicia Day has appeared in numerous television shows and films such as “Supernatural”, “Eureka” and “The Magicians”. Her IMDB, with over 100 credits, can be found here.</p>
+                        <p>However, Felicia is best known for her work in the web video world. She co-starred in Joss Whedon’s Internet musical “Dr. Horrible’s Sing-Along Blog,” which won an Emmy in 2009. She also created and starred in the seminal web series “The Guild” which ran for six seasons and won numerous awards for web video excellence. Felicia expanded the brand into numerous directions, including a hit comic book series with Dark Horse Comics. Recently, her outfit from the show was added to the Smithsonian American History collection as an example of early web media pioneering.</p>
                         <div class="row g-2 mb-4 pb-2">
                             <div class="col-sm-6">
                                 <i class="fa fa-check text-primary me-2"></i>Actor
@@ -243,8 +212,9 @@ However, Felicia is best known for her work in the web video world. She co-starr
         <div class="container">
             <div class="row g-5">
                 <div class="col-lg-3 col-md-6">
-                    <h4 class="text-white mb-4">Get In Touch</h4>
-                    <h2 class="text-primary mb-4"><i class="fa fa-car text-white me-2"></i>Drivin</h2>
+                   <h4 class="text-white mb-4">Get In Touch</h4>
+                    <h2 class="text-primary mb-4"> <span style="color: grey">Falicia</span>
+                        <span class="gradient-text">Day</span> </h2>
                     <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>123 Street, New York, USA</p>
                     <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+012 345 67890</p>
                     <p class="mb-2"><i class="fa fa-envelope me-3"></i>info@example.com</p>
