--- a/contact.html
+++ b/contact.html
@@ -95,14 +95,16 @@
         <div class="container">
             <div class="row g-5">
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s" style="min-height: 450px;">
-                    <h6 class="text-primary text-uppercase mb-2" style="color: black; font-size: 50px; font-family: 'Bernadette', script;"class="text-uppercase mb-2" >Contact</h6>
+                   <h6  style="color: grey; font-size: 50px; font-family: 'Poppins', sans-serif;">Contact</h6>
+
+
                      <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
                     <aside  style="border: 2px solid black; padding: 20px; background-color: rgba(255, 255, 255, 0.8); border-radius: 5px; margin-left: auto; margin-right: auto;">
-                        <h2 class="text-primary" style="color: black;">Our Office<hr></h2>
+                        <h2 style="color: grey;  font-size: 20px; font-family: 'Poppins', sans-serif;">Our Office<hr></h2>
                         <p>1234 Street Name,<br>City, State, Zip Code</p>
                         <p><strong>Phone:</strong> (123) 456-7890</p>
-                        <p><strong>Email:</strong> info@example.com</p>
-                        <h3 class="text-primary" style="color: black;">Office Hours</h3>
+                        <p><strong>Email:</strong> info@example.com <hr></p>
+                        <h3  style="color: grey; font-size: 20px; font-family: 'Poppins', sans-serif;">Office Hours</h3>
                         <p>Monday - Friday: 9:00 AM - 5:00 PM</p>
                         <p>Saturday - Sunday: Closed</p>
                     </aside>
@@ -134,7 +136,7 @@
                                 </div>
                             </div>
                             <div class="col-12">
-                                <button class="btn btn-primary py-3 px-5" type="submit" style="background-color: black">Submit</button>
+                                <button  class="btn btn-primary py-3 px-5" type="submit" style="background-color: black;">Submit</button>
                             </div>
                         </div>
                     </form>
